Generics, StringBuilder, for-loop, Number.valueOf.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@685938 13f79535-47bb-0310-9956-ffa450edef68